# Back

./: banco_de_dados.mwb  db.sqlite3  projeto_banco_dados.mwb  projeto_banco_dados.mwb.bak  pyproject.toml
account/: forms.py  views.py
config/: settings.py  urls.py
