[project]
name = "Backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lucidrey", email = "Lucidreymaitab@gmail.com"},
]
dependencies = ["django>=4.2.24"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
